--- a/views/aluno/lst.ejs
+++ b/views/aluno/lst.ejs
@@ -9,8 +9,8 @@
             <!--aqui vamos fazer o for-->
             <%for (const {nome, matricula} of Alunos) {%>
             <tr>
-                <td><%=aluno.nome%></td>
-                <td><%=aluno.matricula%></td>
+                <td><%=nome%></td>
+                <td><%=matricula%></td>
                 <td></td>
             </tr>
             <%}%>
