--- a/views/aluno/add.ejs
+++ b/views/aluno/add.ejs
@@ -1,7 +1,7 @@
 <%-include('../cabecalho.ejs')%>
 <h1>Adicionar Aluno</h1>
 <div>
-    <a href="/aluno/lst">Listar</a>
+    
 </div>
 <div>
     <form method="post">
@@ -9,6 +9,7 @@
         <input type="text" name="nome"><br>
         <label> Matrícula: </label>
         <input type="text" name="matricula"><br>
-        <button type="submit">value="Cadastrar"</button>
+        <button type="submit">Cadastrar</button>
     </form>
 </div>
+<%-include('../rodape.ejs')%>
