--- a/views/cabecalho.ejs
+++ b/views/cabecalho.ejs
@@ -16,6 +16,10 @@
       <ul>
         <li><a href="/" class="btn"><i class="fa fa-home" ></i>&nbsp;Home</a></li>
         <li><a href="/teste" class="btn">Teste</a></li>
+        <li><a href="/aluno/add" class="btn">Adicionar aluno</a></li>
+        <li><a href="/aluno/lst" class="btn">Listar alunos</a></li>
+        <li><a href="/curso/add" class="btn">Adicionar curso</a></li>
+        <li><a href="/curso/lst" class="btn">Listar cursos</a></li>
       </ul>
     </nav>
 
